[package]
name = "svu"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex      = "1"
anyhow     = "1.0"
thiserror  = "1"
clap = { version = "4.3.0", features = ["derive"] }
chrono     = "0.4"
roxmltree  = "0.19"
colored    = "2.1"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus   = "1.0"
uuid       = { version = "1.6.1", features = ["v4", "fast-rng"] }
pathdiff   = "0.2.1"
rpassword  = "7.3"
rayon      = "1.8"
