[package]
name = "svu"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
regex      = "1"
anyhow     = "1.0"
thiserror  = "1"
clap = { version = "4.3.0", features = ["derive", "wrap_help"] }
chrono     = "0.4"
roxmltree  = "0.19"
colored    = "2.1"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid       = { version = "1.6.1", features = ["v4", "fast-rng"] }
pathdiff   = "0.2.1"
rpassword  = "7.3"
rayon      = "1.8"
