[package]
name = "svu"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
regex      = "1"
anyhow     = "1.0"
thiserror  = "1"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
clap_complete = "4.5"
chrono     = "0.4"
roxmltree  = "0.19"
colored    = "2.1"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid       = { version = "1.6.1", features = ["v4", "fast-rng"] }
pathdiff   = "0.2.1"
rpassword  = "7.3"
rayon      = "1.8"

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true         # Enable link-time optimization
strip = true       # strip symbols from binary
opt-level = 3      # maximum optimization passes
codegen-units = 1  # Reduce number of codegen units to increase optimization
panic = 'abort'    # Abort on panic, no rollback code included
